# oelf

./: .gitignore  Cargo.toml  pyproject.toml  test.py
.github/workflows/: CI.yml
crates/goblin-pyo3/: Cargo.toml  pyproject.toml  test.py
crates/goblin-pyo3/src/: exports.rs  imports.rs  lib.rs  symbols.rs
crates/oelf/: pyproject.toml
crates/oelf/oelf/: cli.py
src/: header.rs  lib.rs  load_commands.rs  sections.rs  segments.rs
