[project]
name = "oelf"
version = "0.1"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "apsw",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
